# omg-architecture

./: .gitignore  Cargo.toml  LICENSE  README.md
omg_core/: Cargo.toml
omg_core/src/: agency.rs  agent.rs  channel.rs  handle.rs  lib.rs  storage.rs  topic.rs
omg_sqlite/: Cargo.toml
omg_sqlite/src/: lib.rs
sync_demo/: Cargo.toml
sync_demo/src/: main.rs
